fixing off center multicolumn

--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -188,6 +188,7 @@
   .multicolumn-card__image-wrapper
   + .multicolumn-card__info {
   padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .background-none
